<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/num_attend_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/number_of_people"
        android:textSize="24sp"
        android:textColor="@color/color_TextView"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="5"
        android:hint="@string/_10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/color_EditText"
        android:textCursorDrawable="@null"
        android:layout_marginEnd="80dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/num_attend_text"
        app:layout_constraintRight_toRightOf="@id/num_attend_text" />

    <TextView
        android:id="@+id/how_hungry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:textColor="@color/color_TextView"
        android:labelFor="@id/spinner_size" />

    <Spinner
        android:id="@+id/spinner_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/how_hungry"
        app:layout_constraintTop_toTopOf="@id/num_pizzas_text_view"

        android:background="@android:drawable/btn_dropdown"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:textColor="@color/color_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_size"
        android:layout_marginTop="20dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />

</androidx.constraintlayout.widget.ConstraintLayout>